force-app/main/default/objects/HL_Webhook_Config__mdt/HL_Webhook_Config__mdt.object-meta.xml
<CustomObject>
    <label>Higher Logic Webhook Config</label>
    <pluralLabel>Higher Logic Webhook Configs</pluralLabel>
</CustomObject>