force-app/main/default/objects/HL_Webhook_Config__mdt/fields/Account_RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Account_RecordType_DeveloperName__c</fullName>
    <label>Account RecordType DeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>