force-app/main/default/objects/HL_Webhook_Config__mdt/fields/Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret__c</fullName>
    <label>Shared Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>